--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,9 +2,12 @@
 
 <h1>Listing Books</h1>
 
+<%= form_tag(:action=>"search") do %>
+ <%= text_field_tag "search[title]" %>
+ <%= submit_tag "検索" %>
+ <%= link_to "リセット", books_path %>
+<% end %>
 
-<%= link_to "検索", search_books_path %>
-<%= link_to "リセット", books_path %>
 
 <table>
   <thead>
