--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,6 +5,8 @@
 
 <%= link_to "検索", search_books_path %>
 <%= link_to "リセット", books_path %>
+<%= link_to "rensyu2", view_helper_test_books_path %>
+
 
 <table>
   <thead>
