12章変更点7終了後

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Railbook</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+ <%= image_tag "railbook.png" %>
+ <ul>
+  <li><%= link_to"書籍一覧",books_path %>
+  <li><%= link_to"出版社一覧",publishes_path%>
+ </ul>
 
 <%= yield %>
 
