--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
  <ul>
   <li><%= link_to"書籍一覧",books_path %>
   <li><%= link_to"出版社一覧",publishes_path%>
+  <li><%= link_to"レビュー一覧",reviews_path%>
  </ul>
 
 <%= yield %>
