--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :publish %><br>
-    <%= f.collection_select :publish, Publish.all, :publishname, :publishname, {:include_blank => true} %>
+    <%= f.collection_select :publish, Publish.all, :publishname, :publishname, %>
   </div>
   <div class="field">
     <%= f.label :published %><br>
