第16章変更点A終了後

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.number_field :price %>
   </div>
   <div class="field">
-    <%= f.label :publish %><br>
-    <%= f.collection_select :publish, Publish.all, :publishname, :publishname, %>
+    <%= f.label :publish_id %><br>
+    <%= f.collection_select :publish_id, Publish.all, :id, :publishname %>
   </div>
   <div class="field">
     <%= f.label :published %><br>
