--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,7 +28,7 @@
         <td><%= book.isbn %></td>
         <td><%= book.title %></td>
         <td><%= book.price %></td>
-        <td><%= book.publish %></td>
+        <td><%= book.publish.publishname %></td>
         <td><%= book.published %></td>
         <td><%= book.cd %></td>
         <td><%= link_to 'Show', book %></td>
