ユーザー追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <li><%= link_to"書籍一覧",books_path %>
   <li><%= link_to"出版社一覧",publishes_path%>
   <li><%= link_to"レビュー一覧",reviews_path%>
+  <li><%= link_to "ユーザー一覧",users_path %></li>
  </ul>
 
 <%= yield %>
