--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Book:</strong>
-  <%= @review.book.title %>
+  <strong>User:</strong>
+  <%= @review.user.username %>
 </p>
 
 <p>
