--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :book_id %><br>
-    <%= f.collection_select :book_id :Book.all, :id, :title %>
+    <%= f.label :user_id %><br>
+    <%= f.collection_select :user_id :User.all, :username %>
   </div>
   <div class="field">
     <%= f.label :body %><br>
