ログイン・ログアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <title>Railbook</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -10,6 +9,10 @@
 <body>
 
  <%= image_tag "railbook.png" %>
+ <div align = "right">
+   ログインユーザー:<%= session[:usrn] %>
+   <%= link_to "ログアウト",controller: :login, action: :index %>
+ </div>
  <ul>
   <li><%= link_to"書籍一覧",books_path %>
   <li><%= link_to"出版社一覧",publishes_path%>
