--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Books</h1>
 
+ログインユーザー:Tom
+
 <%= form_tag(:action=>"search") do %>
  <%= text_field_tag "search[title]",@name %>
  <%= submit_tag "検索" %>
